ope ad bg gap actually resolved now

--- a/css/hhss.css
+++ b/css/hhss.css
@@ -147,13 +147,6 @@ img.hulalogo {
     background-color: ivory;
     width: 100vw;
     position: relative;
-    margin-left: -5vw;
-    margin-top: -100px;
-}
-
-#ads {
-    background-color: ivory;
-    margin: 100px 5vw;
 }
 
 .adclothes, .adhomegoods {
